# SparsePanoramaRoomConnectivity

./: .gitattributes  .gitignore  AGENTS.md  CLUSTER.md  MeetingSummary.md  NEW_CHAT_PROMPT.md  ProposalDraft.md  README.md  TODO.md  Update_prof_meeting.pptx  config.py  pyproject.toml  requirements.txt
ContextMDs/: OpenQuestions.md  PaperNotes.md  ProjectOverview.md  ResearchLog.md
benchmarks/: __init__.py
configs/: zind_leonardo.yaml
docs/: Briefing_2026-07.md  CLUSTER.md  CODEX_CLEANUP_PROMPT.md  CODEX_REFACTOR_PROMPT.md  Landscape_Matrix.md  MIGRATION.md  Oracle_Plan.md  ProjectOverview.md  RelatedWork.md  ResearchLog.md  Roadmap.md  Slides_ProfMeeting.md  Step0_3D_prototype.md
experiments/: exp01_pose_ablation.py  exp02_geometric_detection.py  exp04_immersight.py  exp05_doorway_detect.py  exp06_semantic_doors.py  exp07_door_match.py  exp08_whichside.py  exp09_build_door_dataset.py  exp10_train_contrastive.py  exp11_whichside_trained.py  exp12_connectivity_graph.py  exp13_immersight_match.py  exp14_export_pointcloud.py  exp15_match_saliency.py  exp16_photometric_pose.py  exp17_floor_graph.py  exp18_floor_graph_real.py  exp19_gs_room.py  exp20_gs_pair.py  exp21_gs_pair_estimated.py  exp22_gs_floor.py  exp23_heldout_eval.py  exp24_colmap_compare.py  exp25_diagnose_scaling.py  exp26_hybrid_posegraph.py  exp27_hybrid_real.py  exp28_gtfree_connectivity.py  exp29_floor_benchmark.py  exp30_build_floor_dataset.py  exp31_distance_baseline.py  exp32_train_distance_head.py  exp33_flip_diagnose.py
legacy/: README.md
overlap_probe/: adapters.py  common.py  metrics.py  (+1 more)
(+133 files in other folders)
